--- a/trurail-simulations/csx-road-bundle.html
+++ b/trurail-simulations/csx-road-bundle.html
@@ -88,7 +88,7 @@
                        data-author="TruRail Simulations">
                         Download
                     </a>
-                    <p class="download-notice"><span class="external-icon">⎘</span> Opens on external site</p>
+                    <p class="download-notice">Opens on external site</p>
                 </div>
             </div>
             <div class="mod-exconrail-content-grid">
@@ -155,13 +155,13 @@
                     <p class="page-updated">Page Updated: 10/25/2025</p>
                 </div>
                 <div>
-                    <h2>Description</h2>
+                    <h3>Description</h3>
                     <p>
                         Includes 4 locomotives (GE AC4400CW, Road Slug) and 6 freight cars (Coke Express Hoppers, 100Tn Coal Hoppers, Auto Parts Boxcar, ACF 60ft Boxcar, and Coil Car).
                     </p>
                     
                     <h3>Features</h3>
-                    <ul class="features-list">
+                    <ul class="requirements-list">
                         <li>4K Textures</li>
                         <li>Custom decals</li>
                         <li>FreshAO</li>
@@ -170,7 +170,7 @@
                         <li>Updated numbers and K5LA horn mesh</li>
                     </ul>
                     
-                    <h2>Requirements</h2>
+                    <h3>Requirements</h3>
                     <ul class="requirements-list">
                         <li><a href="https://store.steampowered.com/app/208356/Train_Simulator_BNSF_Dash_9_Loco_AddOn/" target="_blank">BNSF Dash 9 Loco Add-On</a></li>
                         <li><a href="https://store.steampowered.com/app/277759/Train_Simulator_Union_Pacific_GP30_Loco_AddOn/" target="_blank">Union Pacific GP30 Loco Add-On</a></li>
@@ -190,7 +190,6 @@
                        data-author="TruRail Simulations">
                         Download
                     </a>
-                    <p class="download-notice mobile-only"><span class="external-icon">[ICON]</span> Opens on external site</p>
                 </div>
             </div>
         </div>
