--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -93,8 +93,8 @@
             <div id="bundles" class="category-section">
                 <h2 class="category-title">Bundles</h2>
                 <div class="mods-grid">
-                    <a href="#" class="mod-card">
-                        <div class="mod-card-image" style="background-image: url('https://trainsimulatormodarchive.pages.dev/media/placeholder.jpg');"></div>
+                    <a href="trurail-simulations/adriana-county-bundle.html" class="mod-card">
+                        <div class="mod-card-image" style="background-image: url('media/14a601_782b088de4d348a5b25ea8b83b285863~mv2.jpg');"></div>
                         <div class="mod-card-content">
                             <h3 class="mod-card-title">Adriana County Bundle</h3>
                             <p class="mod-card-description">Multiple repaints of EMD's GP40-2 and the PS 4750 Hopper into Adriana County liveries.</p>
@@ -102,7 +102,7 @@
                     </a>
                     
                     <a href="trurail-simulations/csx-road-bundle.html" class="mod-card">
-                        <div class="mod-card-image" style="background-image: url('https://trainsimulatormodarchive.pages.dev/media/placeholder.jpg');"></div>
+                        <div class="mod-card-image" style="background-image: url('media/Untitled.png');"></div>
                         <div class="mod-card-content">
                             <h3 class="mod-card-title">CSX Road Bundle</h3>
                             <p class="mod-card-description">The download contains 5 CSX locomotives and 6 CSX freight cars.</p>
