--- a/trurail-simulations/adriana-county-bundle.html
+++ b/trurail-simulations/adriana-county-bundle.html
@@ -80,15 +80,10 @@
                 <div class="download-section">
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
-                       data-url="https://drive.google.com/file/d/1AiMJAjRwv0dkcNM51OWhS8m8DuAm04nc/view"
-                       data-name="Metra_F59PHI_Pack.zip"
-                       data-version="1.0"
-                       data-size="~250 MB"
-                       data-date="May 31, 2025"
-                       data-author="TruRail Simulations">
+                       data-url="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/TRS_ACDXBundle_1_11242020.7z"
+                       data-name="TRS_ACDXBundle_1_11242020.7z">
                         Download
                     </a>
-                    <p class="download-notice">Opens on external site</p>
                 </div>
             </div>
             <div class="mod-exconrail-content-grid">
@@ -173,16 +168,13 @@
                     <h3>Requirements</h3>
                     <ul class="requirements-list">
                         <li><a href="https://store.steampowered.com/app/774758/Train_Simulator_GP402_Loco_Pack_AddOn/" target="_blank">GP40-2 Loco Pack Add-On</a></li>
+                        <li><a href="https://store.steampowered.com/app/774758/Train_Simulator_GP402_Loco_Pack_AddOn/" target="_blank">GP40-2 Loco Pack Add-On</a></li>
                     </ul>
                     
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger mobile-download-btn" 
-                       data-url="https://drive.google.com/file/d/1AiMJAjRwv0dkcNM51OWhS8m8DuAm04nc/view"
-                       data-name="Metra_F59PHI_Pack.zip"
-                       data-version="1.0"
-                       data-size="~250 MB"
-                       data-date="May 31, 2025"
-                       data-author="TruRail Simulations">
+                       data-url="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/TRS_ACDXBundle_1_11242020.7z"
+                       data-name="TRS_ACDXBundle_1_11242020.7z">
                         Download
                     </a>
                 </div>
