--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
+                <img src="https://files.trainsimarchive.org/media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
             </a>
             <div class="collapse navbar-collapse desktop-nav" id="navbarNav">
                 <ul class="navbar-nav">
@@ -86,7 +86,7 @@
                         </div>
                         
                         <div class="card">
-                            <img src="media/14a601_3dc0cb665169413bb897f03bb1cea489~mv2.png" alt="Ex-Conrail C40-8 Pack" class="thumbnail" onclick="window.location='cleartracks/ex-conrail-c40-8-pack.html'">
+                            <img src="https://files.trainsimarchive.org/media/14a601_3dc0cb665169413bb897f03bb1cea489~mv2.png" alt="Ex-Conrail C40-8 Pack" class="thumbnail" onclick="window.location='cleartracks/ex-conrail-c40-8-pack.html'">
                             <div class="mt-2 text-base title clickable">
                                 <a href="cleartracks/ex-conrail-c40-8-pack.html" class="text-white hover:underline">Ex-Conrail C40-8 Pack</a>
                             </div>
@@ -96,7 +96,7 @@
                         </div>
 
                         <div class="card">
-                            <img src="media/metia_1.png" alt="PS 4750 Hopper Pack 2" class="thumbnail" onclick="window.location='cleartracks/ps-4750-hopper-pack-2.html'">
+                            <img src="https://files.trainsimarchive.org/media/metia_1.png" alt="PS 4750 Hopper Pack 2" class="thumbnail" onclick="window.location='cleartracks/ps-4750-hopper-pack-2.html'">
                             <div class="mt-2 text-base title clickable">
                                 <a href="cleartracks/ps-4750-hopper-pack-2.html" class="text-white hover:underline">PS 4750 Hopper Pack 2</a>
                             </div>
@@ -108,7 +108,7 @@
 
                     <div class="grid grid-cols-3 gap-4">
                         <div class="card">
-                            <img src="media/14a601_528635a3c3c4498ab38a783cb5c53eab~mv2.jpg" alt="CSX 1776 'Veterans' ES44AH" class="thumbnail" onclick="window.location='cleartracks/csx-1776-veterans-es44ah.html'">
+                            <img src="https://files.trainsimarchive.org/media/14a601_528635a3c3c4498ab38a783cb5c53eab~mv2.jpg" alt="CSX 1776 'Veterans' ES44AH" class="thumbnail" onclick="window.location='cleartracks/csx-1776-veterans-es44ah.html'">
                             <div class="mt-2 text-base title clickable">
                                 <a href="cleartracks/csx-1776-veterans-es44ah.html" class="text-white hover:underline">CSX 1776 'Veterans' ES44AH</a>
                             </div>
