--- a/trurail-simulations/adriana-county-bundle.html
+++ b/trurail-simulations/adriana-county-bundle.html
@@ -8,7 +8,7 @@
     <title>Adriana County Bundle - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/tsma-logo.png" as="image">
+    <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
+                <img src="https://files.trainsimarchive.org/media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
             </a>
             <div class="collapse navbar-collapse desktop-nav" id="navbarNav">
                 <ul class="navbar-nav">
@@ -81,7 +81,7 @@
                 <div class="download-section">
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
-                       data-url="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/TRS_ACDXBundle_1_11242020.7z"
+                       data-url="https://files.trainsimarchive.org/TRS_ACDXBundle_1_11242020.7z"
                        data-name="TRS_ACDXBundle_1_11242020.7z">
                         Download
                     </a>
@@ -93,7 +93,7 @@
                     <div class="mod-gallery">
                         <!-- Main Image Display -->
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_782b088de4d348a5b25ea8b83b285863~mv2.jpg" alt="Adriana County Bundle">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_782b088de4d348a5b25ea8b83b285863~mv2.jpg" alt="Adriana County Bundle">
                             
                             <!-- Gallery Controls (visible on hover) -->
                             <div class="gallery-controls">
@@ -114,37 +114,37 @@
                         <!-- Thumbnail Strip -->
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_528a8883a1d44a02a11ac0cb2592dbd8~mv2.jpg" alt="Image 2">
+                                <img src="https://files.trainsimarchive.org/media/14a601_528a8883a1d44a02a11ac0cb2592dbd8~mv2.jpg" alt="Image 2">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(2)" data-index="2">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_8e0ca76b037a435494d0c90e5954963f~mv2.jpg" alt="Image 3">
+                                <img src="https://files.trainsimarchive.org/media/14a601_8e0ca76b037a435494d0c90e5954963f~mv2.jpg" alt="Image 3">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(3)" data-index="3">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_3cd2fc3f3d6e4194a4603a1b2bd7eb02~mv2.jpg" alt="Image 4">
+                                <img src="https://files.trainsimarchive.org/media/14a601_3cd2fc3f3d6e4194a4603a1b2bd7eb02~mv2.jpg" alt="Image 4">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(4)" data-index="4">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_ddb40d476b874cb799bcc522645439f7~mv2.jpg" alt="Image 5">
+                                <img src="https://files.trainsimarchive.org/media/14a601_ddb40d476b874cb799bcc522645439f7~mv2.jpg" alt="Image 5">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(5)" data-index="5">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_7ca06997f4f84e37a90245f9e36883e1~mv2.jpg" alt="Image 6">
+                                <img src="https://files.trainsimarchive.org/media/14a601_7ca06997f4f84e37a90245f9e36883e1~mv2.jpg" alt="Image 6">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(6)" data-index="6">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_78827cb2c655449eab4f4b02493b2029~mv2.jpg" alt="Image 7">
+                                <img src="https://files.trainsimarchive.org/media/14a601_78827cb2c655449eab4f4b02493b2029~mv2.jpg" alt="Image 7">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(7)" data-index="7">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_3f6c41d532cd4a039f803d3ddad1f28c~mv2.jpg" alt="Image 8">
+                                <img src="https://files.trainsimarchive.org/media/14a601_3f6c41d532cd4a039f803d3ddad1f28c~mv2.jpg" alt="Image 8">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(8)" data-index="8">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_13f565615c12420cbf9d903e9308bfa5~mv2.jpg" alt="Image 9">
+                                <img src="https://files.trainsimarchive.org/media/14a601_13f565615c12420cbf9d903e9308bfa5~mv2.jpg" alt="Image 9">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(9)" data-index="9">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_cb542fd57907427da733e20b8a62d6d3~mv2.jpg" alt="Image 10">
+                                <img src="https://files.trainsimarchive.org/media/14a601_cb542fd57907427da733e20b8a62d6d3~mv2.jpg" alt="Image 10">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(10)" data-index="10">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_f83ba41b655f431e9839c85b318e0c4d~mv2.jpg" alt="Image 11">
+                                <img src="https://files.trainsimarchive.org/media/14a601_f83ba41b655f431e9839c85b318e0c4d~mv2.jpg" alt="Image 11">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(11)" data-index="11">
-                                <img src="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/media/14a601_aa4fa4ad35034ebe8504ce2ac117afde~mv2.jpg" alt="Image 12">
+                                <img src="https://files.trainsimarchive.org/media/14a601_aa4fa4ad35034ebe8504ce2ac117afde~mv2.jpg" alt="Image 12">
                             </div>
                         </div>
                     </div>
