--- a/trurail-simulations/metra-f59phi-pack.html
+++ b/trurail-simulations/metra-f59phi-pack.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="../media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
+                <img src="https://files.trainsimarchive.org/media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
             </a>
             <div class="collapse navbar-collapse desktop-nav" id="navbarNav">
                 <ul class="navbar-nav">
@@ -94,7 +94,7 @@
                     <div class="mod-gallery">
                         <!-- Main Image Display -->
                         <div class="mod-gallery-main" onclick="openLightbox(currentCycleIndex)">
-                            <img id="mainDisplayImage" src="https://trainsimulatormodarchive.pages.dev/media/14a601_6cdd4ee2688f406e911d26fa656a96fd~mv2.jpg" alt="Metra F59PHI">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_6cdd4ee2688f406e911d26fa656a96fd~mv2.jpg" alt="Metra F59PHI">
                             
                             <!-- Gallery Controls (visible on hover) -->
                             <div class="gallery-controls">
@@ -115,22 +115,22 @@
                         <!-- Thumbnail Strip -->
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
-                                <img src="https://trainsimulatormodarchive.pages.dev/media/14a601_9ae796392a594f1a818e6ae9257205a4~mv2.jpg" alt="Image 2">
+                                <img src="https://files.trainsimarchive.org/media/14a601_9ae796392a594f1a818e6ae9257205a4~mv2.jpg" alt="Image 2">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(2)" data-index="2">
-                                <img src="https://trainsimulatormodarchive.pages.dev/media/14a601_9cfdd5ecfb884b47a60e9784bcc8b4d5~mv2.jpg" alt="Image 3">
+                                <img src="https://files.trainsimarchive.org/media/14a601_9cfdd5ecfb884b47a60e9784bcc8b4d5~mv2.jpg" alt="Image 3">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(3)" data-index="3">
-                                <img src="https://trainsimulatormodarchive.pages.dev/media/14a601_35fa5b8abb034b7bbf0861ce0bd48fb3~mv2.jpg" alt="Image 4">
+                                <img src="https://files.trainsimarchive.org/media/14a601_35fa5b8abb034b7bbf0861ce0bd48fb3~mv2.jpg" alt="Image 4">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(4)" data-index="4">
-                                <img src="https://trainsimulatormodarchive.pages.dev/media/14a601_9154b08db2144c1084dc49fe478df64e~mv2.jpg" alt="Image 5">
+                                <img src="https://files.trainsimarchive.org/media/14a601_9154b08db2144c1084dc49fe478df64e~mv2.jpg" alt="Image 5">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(5)" data-index="5">
-                                <img src="https://trainsimulatormodarchive.pages.dev/media/14a601_87134f8e7beb4f5481e9ccb2272246b7~mv2.jpg" alt="Image 6">
+                                <img src="https://files.trainsimarchive.org/media/14a601_87134f8e7beb4f5481e9ccb2272246b7~mv2.jpg" alt="Image 6">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(6)" data-index="6">
-                                <img src="https://trainsimulatormodarchive.pages.dev/media/14a601_e941dbf59d44491ca1d924dc27e6cbb5~mv2.jpg" alt="Image 7">
+                                <img src="https://files.trainsimarchive.org/media/14a601_e941dbf59d44491ca1d924dc27e6cbb5~mv2.jpg" alt="Image 7">
                             </div>
                         </div>
                     </div>
