--- a/terms.html
+++ b/terms.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
+                <img src="https://files.trainsimarchive.org/media/tsma-logo.png" alt="Train Simulator Mod Archive" class="logo">
             </a>
             <div class="collapse navbar-collapse desktop-nav" id="navbarNav">
                 <ul class="navbar-nav">
