--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
