--- a/support.html
+++ b/support.html
@@ -8,6 +8,7 @@
     <title>Support Us - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -68,20 +69,20 @@
     <div class="privacy-main">
         <div class="privacy-container">
             <section class="sidebar-section">
-                <h1>Support the Archive</h1>
+                <h1 style="font-size: 2rem; margin-bottom: 1.5rem;">Support the Archive</h1>
                 
                 <div class="space-y-6">
                     <div>
-                        <h2>Support Through Ko-fi</h2>
-                        <p>This page links to our official Ko-fi page. Any tips or donations are completely optional and only exist to help cover technical costs for running the Train Simulator Archive.</p>
-                        <p>Every donation goes straight toward things like server upgrades, file storage, and ongoing maintenance of this self-hosted archive. I don't make and will never make any personal profit from this. I'm not selling or monetizing anyone's content; I'm simply preserving it so it isn't lost.</p>
-                        <p>If there are no donations, the archive will still stay online. I'm fully committed to keeping it running with my own money if necessary. Ko-fi is just a way for people who want to help share some of the cost.</p>
-                        <p>This project is 100% nonprofit and exists for the community, by the community. Your support is never expected, but always appreciated.</p>
-                        <div style="text-align: center; margin-top: 1.5rem;">
+                        <h2 style="font-size: 1.5rem; margin-bottom: 1rem; color: #e0e0e0;">Support Through Ko-fi</h2>
+                        <p style="font-size: 1rem; line-height: 1.6; margin-bottom: 1rem;">This page links to our official Ko-fi page. Any tips or donations are completely optional and only exist to help cover technical costs for running the Train Simulator Archive.</p>
+                        <p style="font-size: 1rem; line-height: 1.6; margin-bottom: 1rem;">Every donation goes straight toward things like server upgrades, file storage, and ongoing maintenance of this self-hosted archive. I don't make and will never make any personal profit from this. I'm not selling or monetizing anyone's content; I'm simply preserving it so it isn't lost.</p>
+                        <p style="font-size: 1rem; line-height: 1.6; margin-bottom: 1rem;">If there are no donations, the archive will still stay online. I'm fully committed to keeping it running with my own money if necessary. Ko-fi is just a way for people who want to help share some of the cost.</p>
+                        <p style="font-size: 1rem; line-height: 1.6; margin-bottom: 1.5rem;">This project is 100% nonprofit and exists for the community, by the community. Your support is never expected, but always appreciated.</p>
+                        <div style="text-align: center; margin-top: 2rem;">
                             <a href="https://ko-fi.com/florentinbelshazzar" target="_blank" class="mod-exconrail-download-button" style="display: inline-block; text-decoration: none;">
                                 <i class="fas fa-mug-hot" style="margin-right: 0.5rem;"></i>Support on Ko-fi
                             </a>
-                            <p style="margin-top: 1rem; color: #b8b8b8;">Thank you!</p>
+                            <p style="margin-top: 1rem; color: #b8b8b8; font-size: 1rem;">Thank you!</p>
                         </div>
                     </div>
                 </div>
