--- a/uts-creations/amtrakf40-ep.html
+++ b/uts-creations/amtrakf40-ep.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Train Simulator Mod Archive - The largest web archive of delisted and lost Train Simulator Classic content.">
+    <meta name="description" content="Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>Metra F59PHI Pack - Train Simulator Mod Archive</title>
+    <title>Amtrak F40PH - EP - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -59,7 +59,7 @@
             <a href="index.html" class="mobile-nav-link">Home</a>
             <a href="contributors.html" class="mobile-nav-link">Contributors</a>
             <div class="mobile-nav-divider">Archive</div>
-            <a href="trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
+            <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
             <a href="#" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
@@ -70,30 +70,28 @@
         <div class="mod-exconrail-section">
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
-                <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
-                <span>Metra F59PHI Pack</span>
+                <a href="#" class="hover:underline">UTS Creations</a> >
+                <span>Amtrak F40PH EP</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">Metra F59PHI Pack</h1>
-                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
+                    <h1 class="text-2xl font-bold">Amtrak F40PH EP</h1>
+                    <p class="text-gray-400">By <a href="#" class="hover:underline">UTS Creations</a></p>
                 </div>
-                <a href="#" 
-                   class="mod-exconrail-download-button download-trigger" 
-                   data-url="https://drive.google.com/file/d/1AiMJAjRwv0dkcNM51OWhS8m8DuAm04nc/view"
-                   data-name="Metra_F59PHI_Pack.zip"
-                   data-version="1.0"
-                   data-size="~250 MB"
-                   data-date="May 31, 2025"
-                   data-author="TruRail Simulations">
-                    Download
-                </a>
+                <div class="download-section">
+                    <a href="#" 
+                       class="mod-exconrail-download-button download-trigger" 
+                       data-url="https://files.trainsimarchive.org/Amtrak_F40PH_EP.7z"
+                       data-name="Amtrak_F40PH_EP.7z">
+                        Download
+                    </a>
+                </div>
             </div>
             <div class="mod-exconrail-content-grid">
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="" alt="Metra F59PHI">
+                            <img id="mainDisplayImage" src="" alt="Amtrak F40PH EP">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -107,58 +105,56 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/unnamed17.jpg" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/amtrakf40ep.png" alt="Image 1">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(1)" data-index="1">
-                                <img src="https://files.trainsimarchive.org/media/unnamed18.jpg" alt="Image 2">
+                                <img src="https://files.trainsimarchive.org/media/amtrak-f40ph-1.jpg" alt="Image 2">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(2)" data-index="2">
-                                <img src="https://files.trainsimarchive.org/media/unnamed19.jpg" alt="Image 3">
+                                <img src="https://files.trainsimarchive.org/media/amtrak-f40ph-2.jpg" alt="Image 3">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(3)" data-index="3">
-                                <img src="https://files.trainsimarchive.org/media/unnamed13.jpg" alt="Image 4">
+                                <img src="https://files.trainsimarchive.org/media/amtrak-f40ph-3.jpg" alt="Image 4">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(4)" data-index="4">
-                                <img src="https://files.trainsimarchive.org/media/unnamed14.jpg" alt="Image 5">
+                                <img src="https://files.trainsimarchive.org/media/amtrak-f40ph-4.jpg" alt="Image 5">
                             </div>
                             <div class="gallery-thumb" onclick="openLightbox(5)" data-index="5">
-                                <img src="https://files.trainsimarchive.org/media/unnamed15.jpg" alt="Image 6">
-                            </div>
-                            <div class="gallery-thumb" onclick="openLightbox(6)" data-index="6">
-                                <img src="https://files.trainsimarchive.org/media/unnamed16.jpg" alt="Image 7">
+                                <img src="https://files.trainsimarchive.org/media/amtrak-f40ph-5.jpg" alt="Image 6">
                             </div>
                         </div>
                     </div>
-                    <p class="text-gray-400 mt-3">Page Updated: 5/31/25</p>
+                    <p class="page-updated">Page Updated: 10/27/2025</p>
                 </div>
                 <div>
-                    <h2 class="text-xl font-bold mb-2">Description</h2>
-                    <p class="text-gray-300 leading-relaxed">
-                        This download contains a repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.
+                    <h3>Description</h3>
+                    <p>
+                        Experience the rebirth of the Amtrak F40PH first-hand with new scripts, flares and much more.
                     </p>
-                    <h3 class="text-lg font-bold mb-2 mb-2">Features</h3>
-                    <ul class="list-disc pl-6 text-gray-300 space-y-2 mb-2">
-                        <li>4K Textures</li>
-                        <li>Custom decals</li>
-                        <li>New headlights</li>
-                        <li>New marker lights</li>
-                        <li>Accurate colors</li>
-                        <li>New engine sounds</li>
+                    <h3>Features</h3>
+                    <ul class="requirements-list">
+                        <li>All-New Sound Set</li>
+                        <li>Cold Start & Isolation Switch</li>
+                        <li>Dynamic Exhaust Effects</li>
+                        <li>HEP Simulation</li>
+                        <li>Improved Physics</li>
+                        <li>Insertable Reverser, Isolation Switch, and PCS</li>
+                        <li>Realistic Headlights</li>
                     </ul>
-                    <div class="mb-2">
-                        <h2 class="text-xl font-bold mb-2 mt-3">Requirements</h2>
-                        <div class="text-gray-300">
-                            <a href="https://store.steampowered.com/app/222606/Train_Simulator_Pacific_Surfliner_LA__San_Diego_Route/" class="hover:underline block">Pacific Surfliner®: LA- San Diego Route</a>
-                            <div class="mb-2"></div>
-                            <a href="https://www.store.searchlight-simulations.com/emd-16n-710g3b-enhancement-pack" class="hover:underline block">EMD 16N-710G3B - Sound Enhancement Pack</a>
-                            <div class="mb-2"></div>
-                        </div>
-                    </div>
+                    <h3>Requirements</h3>
+                    <ul class="requirements-list">
+                        <li><a href="https://store.steampowered.com/app/896711/Train_Simulator_Amtrak_F40PH_California_Zephyr_Loco_AddOn/" target="_blank">Amtrak F40PH 'California Zephyr' Loco</a></li>
+                    </ul>
+                    <a href="#" 
+                       class="mod-exconrail-download-button download-trigger mobile-download-btn" 
+                       data-url="https://files.trainsimarchive.org/Amtrak_F40PH_EP.7z"
+                       data-name="Amtrak_F40PH_EP.7z">
+                        Download
+                    </a>
                 </div>
             </div>
         </div>
     </main>
-    
     <footer id="dynamicFooter">
         <div class="footer-content">
             <div class="footer-nav">
@@ -175,7 +171,6 @@
             <p class="footer-copyright">&copy; 2023 - 2025 Train Simulator Mod Archive</p>
         </div>
     </footer>
-    
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="../js/main.js"></script>
 </body>
