--- a/trurail-simulations/bnsf-25th-anniversary-es44ac.html
+++ b/trurail-simulations/bnsf-25th-anniversary-es44ac.html
@@ -82,7 +82,7 @@
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
                        data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_25_Anniversary.rar"
-                       data-name="TRS%20-%20BNSF_25_Anniversary.rar">
+                       data-name="TRS - BNSF_25_Anniversary.rar">
                         Download
                     </a>
                 </div>
@@ -149,20 +149,26 @@
                         <li><a href="https://store.steampowered.com/app/222611/Train_Simulator_BNSF_ES44DC_Loco_AddOn/" target="_blank">BNSF ES44DC Loco Add-On</a></li>
                     </ul>
                     
-                    <div class="file-details-box" data-name="TRS%20-%20BNSF_25_Anniversary.rar">
-                        <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">File Details</h3>
-                        <div class="file-detail-row">
-                            <span class="file-detail-label">File Size:</span>
-                            <span class="file-detail-value" data-file-size>Loading...</span>
-                        </div>
-                        <div class="file-detail-row">
-                            <span class="file-detail-label">Uploaded:</span>
-                            <span class="file-detail-value" data-file-uploaded>Loading...</span>
-                        </div>
-                        <div class="file-detail-row">
-                            <span class="file-detail-label">Downloads:</span>
-                            <span class="file-detail-value" data-file-downloads>Loading...</span>
-                        </div>
+                    <div class="file-details-box" data-name="TRS - BNSF_25_Anniversary.rar">
+                        <a href="#" 
+                           class="download-trigger" 
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20BNSF_25_Anniversary.rar"
+                           data-name="TRS - BNSF_25_Anniversary.rar"
+                           style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
+                            <div style="display: flex; align-items: center; gap: 0.75rem;">
+                                <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
+                                    <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
+                                </div>
+                                <div style="flex: 1;">
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">BNSF 25th Anniversary ES44AC</div>
+                                    <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
+                                        <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
+                                        <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
+                                        <span><i class="fas fa-download" style="margin-right: 0.25rem;"></i><span data-file-downloads>5555</span> downloads</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                     </div>
                 </div>
