--- a/trurail-simulations/bnsf-25th-anniversary-es44ac.html
+++ b/trurail-simulations/bnsf-25th-anniversary-es44ac.html
@@ -164,7 +164,7 @@
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
-                                        <span><i class="fas fa-download" style="margin-right: 0.25rem;"></i><span data-file-downloads>5555</span> downloads</span>
+                                        <span><i class="fas fa-download" style="margin-right: 0.25rem;"></i><span data-file-downloads>Loading...</span> downloads</span>
                                     </div>
                                 </div>
                             </div>
