--- a/trurail-simulations/adriana-county-bundle.html
+++ b/trurail-simulations/adriana-county-bundle.html
@@ -166,14 +166,29 @@
                         <li><a href="https://store.steampowered.com/app/774758/Train_Simulator_GP402_Loco_Pack_AddOn/" target="_blank">GP40-2 Loco Pack Add-On</a></li>
                     </ul>
                     
-                    <a href="#" 
-                       class="mod-exconrail-download-button download-trigger mobile-download-btn" 
-                       data-url="https://pub-197af2e0b8d64eedbef87ae00aca5bb5.r2.dev/TRS_ACDXBundle_1_11242020.7z"
-                       data-name="TRS_ACDXBundle_1_11242020.7z">
-                        Download
-                    </a>
+                    <div class="file-details-box" data-name="TRS - Metra F59PHI Pack.rar">
+                        <a href="#" 
+                           class="download-trigger" 
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20Metra%20F59PHI%20Pack.rar"
+                           data-name="TRS - Metra F59PHI Pack.rar"
+                           style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
+                            <div style="display: flex; align-items: center; gap: 0.75rem;">
+                                <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
+                                    <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
+                                </div>
+                                <div style="flex: 1;">
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">Metra F59PHI Pack</div>
+                                    <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
+                                        <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
+                                        <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
+                                        <span><i class="fas fa-download" style="margin-right: 0.25rem;"></i><span data-file-downloads>Loading...</span> downloads</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
+            </div> 
         </div>
     </main>
     
