--- a/trurail-simulations/csx-road-bundle.html
+++ b/trurail-simulations/csx-road-bundle.html
@@ -81,7 +81,7 @@
                 <div class="download-section">
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
-                       data-url="https://drive.google.com/file/d/1AiMJAjRwv0dkcNM51OWhS8m8DuAm04nc/view"
+                       data-url="https://files.trainsimarchive.org/TRS%20-%20CSX_Bundle_Ph1.rar"
                        data-name="CSX_Road_Bundle.zip">
                         Download
                     </a>
@@ -170,6 +170,26 @@
                         <li><a href="https://store.searchlight-simulations.com/products/ge-gevo-12-ep" target="_blank">Searchlight Simulations GE GEVO-12 - Sound Enhancement Pack</a></li>
                         <li><a href="https://store.searchlight-simulations.com/products/16n-710g3b-ep" target="_blank">Searchlight Simulations EMD 16N-710G3B - Sound Enhancement Pack</a></li>
                     </ul>
+                    <div class="file-details-box" data-name="TRS - CSX_Bundle_Ph1.rar">
+                        <a href="#" 
+                           class="download-trigger" 
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20CSX_Bundle_Ph1.rar"
+                           data-name="TRS - CSX_Bundle_Ph1.rar"
+                           style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
+                            <div style="display: flex; align-items: center; gap: 0.75rem;">
+                                <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
+                                    <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
+                                </div>
+                                <div style="flex: 1;">
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - CSX_Bundle_Ph1.rar</div>
+                                    <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
+                                        <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
+                                        <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
+                                        <span><i class="fas fa-download" style="margin-right: 0.25rem;"></i><span data-file-downloads>Loading...</span> downloads</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
